--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "vincode",
+  "name": "vin-decoder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "rxjs": "^6.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
